--- a/src/components/home/TimelineSection.astro
+++ b/src/components/home/TimelineSection.astro
@@ -61,7 +61,7 @@ const formatRange = (start: string, end: string) => {
 ---
 
 <section id="experiences" class="py-24 bg-gray-950 text-white">
-  <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+  <div class="max-w-4xl mx-auto px-6 sm:px-8 lg:px-10">
     {/* Work Experience Section */}
     <div class="mb-0">
       <SectionTitle
@@ -69,7 +69,9 @@ const formatRange = (start: string, end: string) => {
         align="center"
       />
 
-      <div class="relative border-l border-purple-900/50 ml-6 space-y-12 pb-12">
+      <div
+        class="relative border-l border-emerald-900/50 md:ml-20 space-y-12 pb-12"
+      >
         {
           work.map((job: any, index: number) => (
             <TimelineItem
@@ -79,20 +81,13 @@ const formatRange = (start: string, end: string) => {
               date={formatRange(job.startDate, job.endDate)}
               description={job.description}
               techStack={job.techStack}
-              color="purple"
+              color="emerald"
               class="timeline-item opacity-0 translate-y-8 transition-all duration-700 ease-out"
               data-index={index}
             />
           ))
         }
       </div>
-    </div>
-
-    {/* Connector Line */}
-    <div
-      class="ml-6 h-32 w-px bg-gradient-to-b from-purple-900/50 to-blue-900/50 relative"
-    >
-      {/* Optional: Add a subtle glow or particle effect here if desired */}
     </div>
 
     {/* Education Section */}
@@ -102,7 +97,9 @@ const formatRange = (start: string, end: string) => {
         align="center"
       />
 
-      <div class="relative border-l border-blue-900/50 ml-6 space-y-12 pt-12">
+      <div
+        class="relative border-l border-blue-900/50 md:ml-20 md:space-y-12 pt-12"
+      >
         {
           education.map((edu: any, index: number) => (
             <TimelineItem
