--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -79,7 +79,7 @@ const {
 		/>
 	</head>
 	<body
-		class="bg-gray-50 text-gray-900 antialiased dark:bg-gray-950 dark:text-gray-100 font-sans relative"
+		class="bg-gray-50 text-gray-900 antialiased dark:bg-gray-950 dark:text-gray-100 font-sans relative overflow-x-hidden"
 	>
 		<LanguagePicker client:load currentLang={lang} />
 		<slot />
