--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -131,7 +131,7 @@ const allSkills = [
         </div>
 
         <div
-          class="absolute bottom-0 w-full h-[88vh] z-10 overflow-visible flex justify-center md:block"
+          class="absolute bottom-0 w-full h-[88dvh] z-10 overflow-visible flex justify-center md:block"
         >
           <div
             class="w-full h-full animate-on-scroll opacity-0 translate-y-8 transition-all duration-1000 ease-out z-10"
